@@ -5,6 +5,7 @@ numba>=0.35
 pandas>=0.25
 scipy>=0.20
 scikit_learn>=0.20
+tqdm
 xlrd >= 1.0.0
 # torch  please install this by yourself
 # xgboost  please install this by yourself
