@@ -6,5 +6,6 @@ pandas>=0.25
 scipy>=0.20
 scikit_learn>=0.20
 torch
+tqdm
 xgboost
 xlrd >= 1.0.0
